force-app/main/default/objects/Test_Plan__c/fields/Number_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases__c</fullName>
    <label>Number of Cases</label>
    <summaryForeignKey>Test_Plan_Case_Junction__c.Test_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>