force-app/main/default/objects/Test_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Feature</fullName>
                <default>true</default>
                <label>New Feature</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regression - Full</fullName>
            </value>
            <value>
                <fullName>Regression - Certification</fullName>
            </value>
            <value>
                <fullName>Regression - Smoke</fullName>
            </value>
            <value>
                <fullName>Regression - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>