force-app/main/default/objects/Test_Plan__c/fields/Window_Height__c.field-meta.xml
<CustomField>
    <fullName>Window_Height__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Height of the visible portion of the test case list view (in pixels).</description>
    <label>Case List Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>