force-app/main/default/objects/Test_Plan__c/listViews/Full_Apex_Test_Plans.listView-meta.xml
<ListView>
    <fullName>Full_Apex_Test_Plans</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Number_of_Cases__c</columns>
    <columns>Product_Family_PL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>equals</operation>
        <value>Roadnet Apex</value>
    </filters>
    <label>Apex Test Plans</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>